# templated_rs

./: .gitignore  Cargo.toml  index.html  package.json
src/: lib.rs  main.rs
src/comps/: card.rs  lesson.rs  mod.rs  title.rs
src/utils/: colors.rs
