[package]
name = "Templated"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = { git = "https://github.com/yewstack/yew/", features = ["csr"] }
gloo="0.10.0"
gloo-net = "0.4.0"
wasm-bindgen-futures = "0.4"
wasm-bindgen="0.2.87"
web-sys={version="0.3.64", features=["HtmlInputElement"] }
serde="1.0.188"
serde_json="1.0.107"
stylist = {version = "0.13.0", features = ["yew"]}
